# microservices

./: .gitignore  ChangeLog.md  Example.hs  README.md  microservices.cabal  stack-lts-5.14.yaml  stack-lts-5.yaml
src/: Microservices.hs
src/Control/: Microservices.hs
src/Control/Microservices/Internal/: Stack.hs
